Create header for profile widget

--- a/css/style.styl
+++ b/css/style.styl
@@ -1,5 +1,23 @@
-// @require './_*.styl'
+@require './_*.styl'
+
+body
+  font-family 'Work Sans', Helvetica, Arial, sans-serif
+  padding 20px
+
+.profile-header
+  background-color light-brown
+  border-radius 5px
+  box-shadow -2px -2px 16px -4px #776B5e
+  padding 20px 10px
+  h5
+    color white
+    font-size 18px
+    font-weight 500
+  .subtitle
+    color dark-brown
+    font-size 12px
+    font-weight 400
 
 .img-padded
-  border 1px solid grey
-  padding 5px
+  border 1px solid dark-brown
+  padding 7px
