Horizontally center avatar

--- a/css/_sidebar-menu.styl
+++ b/css/_sidebar-menu.styl
@@ -1,7 +1,7 @@
-.profile-widget header, nav
+.sidebar-widget header, nav
   box-shadow -2px -2px 16px -4px dark-brown
 
-.profile-widget header
+.sidebar-widget header
   background-color light-brown
   border-radius 5px 5px 0 0
   padding 20px 10px
@@ -10,7 +10,7 @@
     color white
     text-transform uppercase
 
-.profile-widget nav
+.sidebar-widget nav
   background-color light-grey
   border-radius 0 0 5px 5px
 
