--- a/css/style.styl
+++ b/css/style.styl
@@ -3,11 +3,14 @@
 body
   padding 20px
 
+.widget-area
+  margin 20px
+
 // override Bootstrap link styling
 .no-underline
   color inherit
   &:hover
-    text-decoration none !important
+    text-decoration none
 
 // round avatar image
 .img-padded
