Finish user widget styling

--- a/css/_sidebar-menu.styl
+++ b/css/_sidebar-menu.styl
@@ -1,5 +1,6 @@
-.sidebar-widget header, nav
-  box-shadow -2px -2px 16px -4px dark-brown
+.sidebar-widget
+  header, nav
+    box-shadow -2px -2px 16px -4px dark-brown
 
 .sidebar-widget header
   background-color light-brown
@@ -24,7 +25,7 @@
       span
         color red
     &:hover:not(.current-item)
-      font-weight 700
+      font-weight 500
       span
         color dark-brown
 
