--- a/css/style.styl
+++ b/css/style.styl
@@ -9,7 +9,8 @@ body
 // override Bootstrap link styling
 .no-underline
   color inherit
-  &:hover
+  &:hover, &:focus
+    color inherit
     text-decoration none
 
 // round avatar image
