--- a/css/style.styl
+++ b/css/style.styl
@@ -9,6 +9,7 @@ body
 // override Bootstrap link styling
 .no-underline
   color inherit
+  padding 0px !important
   &:hover, &:focus
     color inherit
     text-decoration none
