--- a/css/_user-widget.styl
+++ b/css/_user-widget.styl
@@ -56,3 +56,13 @@
     padding-right 10px
     vertical-align middle
     margin-top -5px
+
+
+// TO DO
+// animate pressing the like button
+// add a slide-down comment form when you click comment button?
+
+
+// RESPONSIVE DESIGN for smaller screens
+// avatar image positioning
+// make widgets full screen width
