--- a/css/style.styl
+++ b/css/style.styl
@@ -1,10 +1,10 @@
 @require './_*.styl'
 
 body
-  padding 20px
+  padding 1%
 
 .widget-area
-  margin 20px
+  margin 1%
 
 // override Bootstrap link styling
 .no-underline
