--- a/css/_media-queries.styl
+++ b/css/_media-queries.styl
@@ -1,10 +1,17 @@
-// small devices
+// default
+body
+  padding 1%
+
+.widget-area
+  margin 1%
+  padding 0
+
+// cell phones
 @media (max-width: 480px)
   body
     padding 0
 
   .widget-area
-    margin-bottom 10px
-
+    margin 0 0 10px 0
     h2
       font-size 1.7em
