--- a/css/_media-queries.styl
+++ b/css/_media-queries.styl
@@ -15,3 +15,11 @@ body
     margin 0 0 10px 0
     h2
       font-size 1.7em
+
+// tablets
+@media (min-width: 481px) and (max-width: 768px)
+  .sidebar-widget
+    max-width 350px
+
+  .user-widget
+    max-width 600px
