add local SVG icons

--- a/css/_user-widget.styl
+++ b/css/_user-widget.styl
@@ -52,7 +52,7 @@
     a:hover, a:focus
       background-color inherit
 
-  .glyphicon
+  .icon
     padding-right 10px
     vertical-align middle
     margin-top -5px
