make all <a> tags a <button>, adjust styles accordingly

--- a/css/_sidebar-menu.styl
+++ b/css/_sidebar-menu.styl
@@ -16,10 +16,10 @@
   background-color light-grey
   border-radius 0 0 5px 5px
 
-  li
+  button
     font-size 1.2em
     font-weight 300
-    padding 22px 30px
+    padding 25px 30px
     &.current-item
       background-color light-tan
       border-left 5px solid green
@@ -30,5 +30,5 @@
       span
         color dark-brown
 
-  .icon
+  [class*='icon-']
     float right
