--- a/css/_iconography.styl
+++ b/css/_iconography.styl
@@ -24,24 +24,45 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-location:before {
-    content: "\e947";
+.icon-location {
+    @extend .icon
+    &:before {
+        content: "\e947";
+    }
 }
-.icon-bubble:before {
-    content: "\e96b";
+.icon-bubble {
+    @extend .icon
+    &:before {
+        content: "\e96b";
+    }
 }
-.icon-user:before {
-    content: "\e971";
+.icon-user {
+    @extend .icon
+    &:before {
+        content: "\e971";
+    }
 }
-.icon-wrench:before {
-    content: "\e991";
+.icon-wrench {
+    @extend .icon
+    &:before {
+        content: "\e991";
+    }
 }
-.icon-stats-bars:before {
-    content: "\e99c";
+.icon-stats-bars {
+    @extend .icon
+    &:before {
+        content: "\e99c";
+    }
 }
-.icon-eye:before {
-    content: "\e9ce";
+.icon-eye {
+    @extend .icon
+    &:before {
+        content: "\e9ce";
+    }
 }
-.icon-heart:before {
-    content: "\e9da";
+.icon-heart {
+    @extend .icon
+    &:before {
+        content: "\e9da";
+    }
 }
