--- a/css/_sidebar-menu.styl
+++ b/css/_sidebar-menu.styl
@@ -8,9 +8,18 @@
   border-radius 5px 5px 0 0
   padding 20px 10px
 
-  h4
-    color white
-    text-transform uppercase
+  .user-info
+    padding 5% 10px
+
+    h4
+      color white
+      text-transform uppercase
+      font-size 20px
+      line-height .9
+
+    .subtitle
+      font-size 15px
+      margin-top 7px
 
 .sidebar-widget nav
   background-color light-grey
@@ -19,7 +28,7 @@
   button
     font-size 1.2em
     font-weight 300
-    padding 25px 30px
+    padding 18px 30px
     &.current-item
       background-color light-tan
       border-left 5px solid green
