fix sidebar widget to better fit dimensions of comp

--- a/css/_user-widget.styl
+++ b/css/_user-widget.styl
@@ -4,8 +4,11 @@
   header, section, nav
     margin 0px
 
-.user-widget .cover-image
+.user-widget header
   border-radius 5px 5px 0 0
+  // height 225px
+  // background-image url("../../resources/images/user-cover-img.jpg")
+  // background-size cover
 
   img
     border-radius 5px 5px 0 0
