--- a/css/_colors.styl
+++ b/css/_colors.styl
@@ -1,6 +1,7 @@
 light-brown = #B1A599
 dark-brown = #776B5E
-light-tan = #F6F0EC
 light-grey = #F7F7F7
+dark-grey = #D4D0CB
+light-tan = #F6F0EC
 red = #E55F3A
 green = #4DAF7C
