--- a/css/_user-widget.styl
+++ b/css/_user-widget.styl
@@ -4,63 +4,58 @@
   header, section, nav
     margin 0px
 
-.user-widget header
-  border-radius 5px 5px 0 0
-  // height 225px
-  // background-image url("../../resources/images/user-cover-img.jpg")
-  // background-size cover
-
-  img
+  .cover-image
     border-radius 5px 5px 0 0
-    min-width 100%
-    min-height 100%
-    max-width 100%
+    height 225px
+    background-image url("../../resources/images/user-cover-img.jpg")
+    background-size cover
 
-.user-widget section
-  padding 20px 0
+  .user
+    padding 30px 0
 
-  h2
-    padding-left 0
-    // set margin equal to avatar image padding
-    margin-top 7px
+    .name
+      padding-left 0
+      margin 1px 0 10px 0
 
-  .image-wrapper
-    min-height 96px
-    // horizontally center avatar
-    img
-      position absolute
-      left 50%
-      width 96px
-      height 96px
-      margin-left -(@width / 2)
+    .avatar
+      min-height 96px
 
-.social-buttons
-  background-color light-tan
-  border-radius 0 0 5px 5px
-  display flex
-  justify-content space-between
+      .img-padded
+        border-color dark-grey
 
-  li
-    width 100%
+    .user-info
+      padding-left 2px
 
-    &:not(:first-child)
+      .subtitle
+        padding-left 4px
+        line-height 1.5
+
+  .social-buttons
+    background-color light-tan
+    border-radius 0 0 5px 5px
+    display flex
+    justify-content space-between
+
+    li
+      width 100%
+      &:not(:first-child)
+        button
+          border-left 2px solid white
+          width @width - 2px
+
       button
-        border-left 1px solid white
-        width @width - 2px
+        height 50px
+        color light-brown
+        font-size 1.5em
+        font-weight 500
+        line-height 50px
+        text-align center
+        &:hover, &:hover span, &.current-item, &.current-item span
+          color dark-brown
+        &.liked, &.liked span
+          color red
 
-    button
-      height 50px
-      color light-brown
-      font-size 1.5em
-      font-weight 500
-      line-height 50px
-      text-align center
-      &:hover, &:hover span, &.current-item, &.current-item span
-        color dark-brown
-      &.liked, &.liked span
-        color red
-
-      [class*='icon-']
-        padding-right 10px
-        vertical-align middle
-        margin-top -5px
+        [class*='icon-']
+          padding-right 10px
+          vertical-align middle
+          margin-top -5px
